@@ -14,13 +14,15 @@ Development version
 - [!] pat: renamed Router.Del method to Delete. It doesn't make sense
 	to shorten the HTTP method name, even less to save only three
 	letters.
+- [Fix] sessions: when a session option's MaxAge is less than 0,
+	a date in the past is set as the value for the Expires field.
 - Added package css/scanner, a compliant tokenizer for CSS3.
 - sessions: FilesystemStore's filenames now use alphanumeric
 	characters only.
-- schema: an error that is a map[path]error is returned in case of
-	conversion errors. empty values are ignored.
 - sessions: when a session is created, default Options are set,
 	so that session.Options is immediately available for use.
+- schema: an error that is a map[path]error is returned in case of
+	conversion errors. empty values are ignored.
 
 
 gorilla r2012.04.13
